# chip8emu

./: .gitignore  CMakeLists.txt  README.md
examples/: ex.rom  myrom.rom
include/: common.h  cpu.h  utils.h  vm_def.h
lib/win/: SDL2.lib  SDL2main.lib
src/: cpu.cpp  main.cpp
test/: testmain.cpp
